err/pivotaltracker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pivotaltracker'...
Compiling './lib/python3.5/site-packages/pivotaltracker/_client.py'...
***   File "./lib/python3.5/site-packages/pivotaltracker/_client.py", line 227
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pivotaltracker/_helpers.py'...
***   File "./lib/python3.5/site-packages/pivotaltracker/_helpers.py", line 22
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pivotaltracker/_termcolor.py'...
***   File "./lib/python3.5/site-packages/pivotaltracker/_termcolor.py", line 48
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pivotaltracker/tool.py'...
***   File "./lib/python3.5/site-packages/pivotaltracker/tool.py", line 23
    print required_style("What is your Pivotal Token?")
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pivotaltracker-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
